--- a/main.ipynb
+++ b/main.ipynb
@@ -480,11 +480,11 @@
     "        weight = torch.FloatTensor(weight).to(device)\n",
     "        loss_func = nn.CrossEntropyLoss(weight=weight)\n",
     "        \n",
-    "    optimizer = torch.optim.Adam(model.parameters(),lr=lr)#也可以使用SGD优化算法进行训练\n",
+    "    optimizer = torch.optim.Adam(model.parameters(),lr=lr)\n",
     "    \n",
     "    early_stopping = EarlyStopping(patience)\n",
     "    '''\n",
-    "    optimizer = torch.optim.SGD(model.parameters(),lr=lr)#也可以使用SGD优化算法进行训练\n",
+    "    optimizer = torch.optim.SGD(model.parameters(),lr=lr)\n",
     "    scheduler =  torch.optim.lr_scheduler.CosineAnnealingLR(optimizer = optimizer,T_max =  EPOCH)\n",
     "    \n",
     "    scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.1, patience=patience, \n",
@@ -576,14 +576,14 @@
     "    label=[]\n",
     "    acc=[]\n",
     "    if CV_test_datasets is not False:\n",
-    "        total_test = 0  # 总数\n",
+    "        total_test = 0  \n",
     "        sum_loss_test= 0\n",
     "        model.eval()\n",
     "        for test_dataset in CV_test_datasets:\n",
     "            test_loader = Data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "            for data in test_loader:\n",
     "                inputs, labels = data\n",
-    "                inputs, labels = inputs.to(device), labels.to(device)  # 有GPU则将数据置入GPU加速\n",
+    "                inputs, labels = inputs.to(device), labels.to(device)  \n",
     "                pred_prob = model(inputs)\n",
     "                loss = loss_func(pred_prob, labels)\n",
     "                sum_loss_test+=loss.item()\n",
@@ -1117,7 +1117,7 @@
     "    for i in range(1,len(s)):\n",
     "        char = s[i]\n",
     "        if word + char in hindden_list:\n",
-    "            #write2martix(word, word + char)这个其实已经手工做掉了\n",
+    "            #write2martix(word, word + char)\n",
     "            word = word + char\n",
     "        if char in hindden_list:\n",
     "            write2martix(word, char)\n",
@@ -1262,10 +1262,10 @@
     "        weight = [max(class_weight)/x for x in class_weight]\n",
     "        weight = torch.FloatTensor(weight).to(device)\n",
     "        loss_func = nn.CrossEntropyLoss(weight=weight)\n",
-    "    optimizer = torch.optim.Adam(model.parameters(),lr=lr)#也可以使用SGD优化算法进行训练\n",
+    "    optimizer = torch.optim.Adam(model.parameters(),lr=lr)\n",
     "    early_stopping = EarlyStopping(patience)\n",
     "    for epoch in range(EPOCH):\n",
-    "        #返还acc，ground truth 和 predicited label用于绘制混淆矩阵\n",
+    "        # return acc，ground truth and predicited label for confusion matrix\n",
     "        sum_loss_train= 0\n",
     "        total_train=0\n",
     "        model.train()\n",
@@ -1273,7 +1273,7 @@
     "            train_loader = Data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "            for data in train_loader:\n",
     "                inputs, labels = data\n",
-    "                inputs, labels = inputs.to(device), labels.to(device)  # 有GPU则将数据置入GPU加速\n",
+    "                inputs, labels = inputs.to(device), labels.to(device)  \n",
     "                optimizer.zero_grad()\n",
     "                pred = model(inputs)\n",
     "                loss = loss_func(pred, labels)\n",
@@ -1292,7 +1292,7 @@
     "                val_loader = Data.DataLoader(val_dataset, batch_size=batch_size, shuffle=True)\n",
     "                for data in val_loader:\n",
     "                    inputs, labels = data\n",
-    "                    inputs, labels = inputs.to(device), labels.to(device)  # 有GPU则将数据置入GPU加速\n",
+    "                    inputs, labels = inputs.to(device), labels.to(device) \n",
     "                    pred = model(inputs)\n",
     "                    loss = loss_func(pred, labels)\n",
     "                    sum_loss_val+=loss.item()\n",
@@ -1306,14 +1306,14 @@
     "            #scheduler.step()\n",
     "            '''\n",
     "            early_stopping(val_loss, model)\n",
-    "            # 若满足 early stopping 要求\n",
+    "            \n",
     "            if early_stopping.early_stop:\n",
     "                if verbose:\n",
     "                    print(\"Early stopping\")\n",
     "                break\n",
     "        if verbose:\n",
     "            if CV_test_datasets is not False:\n",
-    "                total_test = 0  # 总数\n",
+    "                total_test = 0 \n",
     "                sum_loss_test= 0\n",
     "                predicted=[]\n",
     "                label=[]\n",
@@ -1343,14 +1343,14 @@
     "    ##############################EVALUATION model###############################################\n",
     "    \n",
     "    if CV_test_datasets is not False:\n",
-    "        total_test = 0  # 总数\n",
+    "        total_test = 0  \n",
     "        sum_loss_test= 0\n",
     "        model.train()\n",
     "        for test_dataset in CV_test_datasets:\n",
     "            test_loader = Data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "            for data in test_loader:\n",
     "                inputs, labels = data\n",
-    "                inputs, labels = inputs.to(device), labels.to(device)  # 有GPU则将数据置入GPU加速\n",
+    "                inputs, labels = inputs.to(device), labels.to(device)  \n",
     "                aux_inputs = inputs.clone().detach().requires_grad_(True)\n",
     "                pred_prob = model(aux_inputs)\n",
     "                loss = loss_func(pred_prob, labels)\n",
@@ -3796,9 +3796,9 @@
    "hash": "b9ea9ba5ae74b1398a630feb3651b8acb263e18aa2ea7db4a76df02121bff196"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:test]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-test-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3810,7 +3810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.9.13"
   },
   "toc-showcode": true
  },
